# CPP-Task

./: README.md
BUGS/BugId-109085/: CMakeLists.txt  Main.qml  main.cpp
BUGS/QTBUG-108406/: CMakeLists.txt  Main.qml  main.cpp
BUGS/QTBUG-110060/: CMakeLists.txt  Main.qml  main.cpp
BUGS/QTBUG-123849/: main.cpp
BUGS/QTBUG-137579/: Message.cpp  Message.h  Point.cpp  Point.h  QTBUG-137579.pro  main.cpp
BUGS/QTBUG-89600/: main.cpp
BUGS/QTBUG-89644/: CMakeLists.txt  Main.qml  main.cpp
BUGS/QTBUG-91435/: CMakeLists.txt  Main.qml  main.cpp
Check/: Check  Makefile  abc.h  main.cpp
Cherno Videos/Array_Data_Structure/: Array_Data_Structure.pro  main.cpp  myarray.cpp  myarray.h
Cherno Videos/SingleTons/: main.cpp  singleton.cpp  singleton.h
Cherno Videos/String_faster_using_string_view/: main.cpp
Cherno Videos/Track_Memory_Allocation/: main.cpp
Cherno Videos/Vector/: main.cpp
Cherno Videos/any_data/: any_data  main.cpp
Cherno Videos/lvalue_rValues/: main.cpp
Cherno Videos/move_semantics/: String.cpp  String.h  entity.cpp  main.cpp  move_semantics.pro
Cherno Videos/std_move/: Entity.cpp  Entity.h  String.cpp  String.h  main.cpp  std_move.pro
Deerendra_Sir_Task/Calendar/: Calendar.pro
Deerendra_Sir_Task/Calendar_TheaterBooking_QT/: bookingmanager.h  calendar.cpp  calendar.h  calendarwidget.cpp  calendarwidget.h  date.cpp  date.h  movietheater.cpp  movietheater.h
Deerendra_Sir_Task/Employee_Office/: employee.cpp  employee.h  main.cpp  office.cpp  office.h
Deerendra_Sir_Task/Employee_Office_BaseObject/: baseobject.cpp  baseobject.h  employee.cpp  (+4 more)
(+33 files in other folders)
